@@ -1,3 +1,7 @@
+2007-06-06  Yvan Vanhullebus  <vanhu@netasq.com>
+	* src/racoon/handler.c: ignore obsolete lifebyte when validating
+	  reloaded configuration.
+
 2007-05-04  Yvan Vanhullebus  <vanhu@netasq.com>
 	* src/racoon/pfkey.c: Force the update of ph2 in pk_recvupdate()
 	  if NAT_T support, to solve some port match problems with the
